* Fixed sporadic ICMP echo (ping) false positive alert when response arrived out of order.   Also removed limit of 20 pings per cycle, improved response time computation, rised ICMP   request data size to 64 bytes.
git-svn-id: http://monit.googlecode.com/svn/trunk@169 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -45,6 +45,10 @@ BUGFIXES:
 * If process resource usage gathering failed, retry next cycle as the error
   can be temporary.
 
+* Fixed sporadic ICMP echo (ping) false positive alert when response arrived out of order.
+  Also removed limit of 20 pings per cycle, improved response time computation, rised ICMP
+  request data size to 64 bytes.
+
 
 Version 5.1.1
 
