* DNS protocol test now accepts request refusal as correct response - the test is based   on query for NS root record which may be prohibited on server side, whereas the negative   response means that the server reacts to requests.
git-svn-id: http://monit.googlecode.com/svn/trunk@177 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -49,6 +49,10 @@ BUGFIXES:
 
 * Fixed sporadic ICMP echo (ping) false positive alerts.
 
+* DNS protocol test now accepts request refusal as correct response - the test is based
+  on query for NS root record which may be prohibited on server side, whereas the negative
+  response means that the server reacts to requests.
+
 
 Version 5.1.1
 
