- cleanup procname (not used) ... every platform keeps procname (isolated name of executed image) and cmdline (full path + arguments)   separate, but since cmdline is superset of procname and we don't need procname, it is dropped. Note that system services (in-kernel)   have only procname associated - cmdline is NULL ... we set cmdline to procname in this case so we can still match the process.
- url escape service name ... one of artyom khafizof's patches uncovered problem, that when the service name contains
  '/' it cannot be managed as the web interface returns errors. The patch didn't addressed the root cause ... correct
  solution is to url escape the service name (including '/' character which has reserved meaning)



git-svn-id: http://monit.googlecode.com/svn/trunk@183 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -67,6 +67,10 @@ BUGFIXES:
 * M/Monit heartbeat is made non-blocking even on service level, so when some service test
   takes long time (waiting on timeout), it won't generate false alert in M/Monit.
 
+* Fixed support for service names which contain "/" in the name so they can be managed
+  via monit web interface, also removed limitation of service names so they can start
+  with slash ("/") now. Thanks to Artyom Khafizof.
+
 
 Version 5.1.1
 
