fix load average monitoring on AIX (showed 0 for all ranges)
git-svn-id: http://monit.googlecode.com/svn/trunk@189 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -75,6 +75,8 @@ BUGFIXES:
    RFC 3207: 4.2. Thanks to Lorenzo A. Sedano Cadiñanos for patch and
    investigating the problem.
 
+ * Fixed system load average monitoring on AIX
+
 
 Version 5.1.1
 
