fixed protocol name in manual text
git-svn-id: http://monit.googlecode.com/svn/trunk@197 808b68a2-07de-11de-a1f0-819f45317607

--- a/monit.pod
+++ b/monit.pod
@@ -2445,7 +2445,7 @@ For more examples, see the example section below.
 
 =head4 Testing the RADIUS protocol
 
-The SIP test is similar to the other protocol tests, but in
+The RADIUS test is similar to the other protocol tests, but in
 addition allows extra optional parameters.
 
 =over 4
