Add automatic registration of credentials. The credentials block is part of <server> element and it is included only in the case that following conditions are true 1.) monit http interface is enabled 2.) suitable credentials were found (cleartext + read/write)
git-svn-id: http://monit.googlecode.com/svn/trunk@198 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -43,6 +43,11 @@ NEW FEATURES AND FUNCTIONS:
 
 * Remove configuration limit of 20 ICMP requests per cycle.
 
+* Monit now registers credentials with M/Monit automatically, so it's not
+  necessary to set it manually in M/Monit anymore in order to manage services
+  on Monit host. The automatic credentials registration can be disabled:
+     set mmonit http://monit:monit@192.168.1.10:8080/collector and register without credentials
+
 BUGFIXES:
 
 * Show real process uptime - formerly the presented uptime was based on create/modify
