fix the MONIT_DESCRIPTION environment variable
git-svn-id: http://monit.googlecode.com/svn/trunk@212 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -90,6 +90,9 @@ BUGFIXES:
 
 * Fixed RADIUS procol test. Thanks to Alan DeKok for patch.
 
+* Fixed MONIT_DESCRIPTION environment variable. Thanks to Marco Roeland for
+  patch.
+
 * Fixed system load average monitoring on AIX
 
 * Fixed compilation on AIX 6.1
