fix #31008: monit adds wrong newlines to email headers causing broken mails
git-svn-id: http://monit.googlecode.com/svn/trunk@237 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,10 @@ BUGFIXES:
   with string "system_" so conflict with existing service is less likely. Thanks to
   Thorsten Kampe for report and help.
 
+* Remove extra NL characters from message when resource succeeded event is sent.
+  The extra NL character may break the mail headers. Thanks to Hanno Boeck for
+  report and patch.
+
 
 
 Version 5.1.1
