* Fixed display of cpu user/system/wait usage which temporarily displayed -1.0%   between two monitoring cycles while cpu monitoring was initializing. Thanks to   Marcus Muelbuesch for report.
git-svn-id: http://monit.googlecode.com/svn/trunk@238 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -112,6 +112,10 @@ BUGFIXES:
   The extra NL character may break the mail headers. Thanks to Hanno Boeck for
   report and patch.
 
+* Fixed display of cpu user/system/wait usage which temporarily displayed -1.0%
+  between two monitoring cycles while cpu monitoring was initializing. Thanks to
+  Marcus Muelbuesch for report.
+
 
 
 Version 5.1.1
