fix division by zero when 'monit status' is called immediately after monit start before blocks are initialized
git-svn-id: http://monit.googlecode.com/svn/trunk@241 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -116,6 +116,9 @@ BUGFIXES:
   between two monitoring cycles while cpu monitoring was initializing. Thanks to
   Marcus Muelbuesch for report.
 
+* Fixed division by zero when 'monit status' was called immediately after monit
+  start before service was initialized.
+
 
 
 Version 5.1.1
