* Fixed display of port response time as -1 in 'monit status' if it was called in   the middle of service test.
git-svn-id: http://monit.googlecode.com/svn/trunk@242 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -119,6 +119,9 @@ BUGFIXES:
 * Fixed division by zero when 'monit status' was called immediately after monit
   start before service was initialized.
 
+* Fixed display of port response time as -1 in 'monit status' if it was called in
+  the middle of service test.
+
 
 
 Version 5.1.1
