The monitoring state update from state file on monit start reseted the service's initializing state so bunch of values which were not initialized yet were displayed when monit status was called immediately after monit start.
git-svn-id: http://monit.googlecode.com/svn/trunk@243 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -116,11 +116,10 @@ BUGFIXES:
   between two monitoring cycles while cpu monitoring was initializing. Thanks to
   Marcus Muelbuesch for report.
 
-* Fixed division by zero when 'monit status' was called immediately after monit
-  start before service was initialized.
-
 * Fixed display of port response time as -1 in 'monit status' if it was called in
   the middle of service test.
+
+* Fixed display of initializing state for services after monit start or reload.
 
 
 
