add backtrace for log messages with error level and higher if debug mode is enabled
git-svn-id: http://monit.googlecode.com/svn/trunk@247 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ NEW FEATURES AND FUNCTIONS:
 
 * Allow use of start/stop program statements in 'check system'
 
+* Display backtrace on error if debug mode is enabled. The backtrace is available if the OS
+  supports it (for example Linux, MacOSX, Solaris do support it).
+
 BUGFIXES:
 
 * Show real process uptime - formerly the presented uptime was based on create/modify
