git-svn-id: http://monit.googlecode.com/svn/trunk@260 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,8 +54,8 @@ NEW FEATURES AND FUNCTIONS:
 
 * Allow use of start/stop program statements in 'check system'
 
-* Display backtrace on error if debug mode is enabled. The backtrace is available if the OS
-  supports it (for example Linux, MacOSX, Solaris do support it).
+* Display backtrace on error if debug mode is enabled. The backtrace is available if the OS'
+  libc supports it (for example Linux, MacOSX, Solaris do).
 
 BUGFIXES:
 
